--- a/react-todolist/src/App.css
+++ b/react-todolist/src/App.css
@@ -1,6 +1,10 @@
-.App {
-  text-align: center;
-}
+
+  .App {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
 
 .App-logo {
   height: 40vmin;
