--- a/react-todolist/src/styles/TodoItem.css
+++ b/react-todolist/src/styles/TodoItem.css
@@ -4,6 +4,7 @@
 }
 
 .todoItem-todo{
+    background-color: bisque;
 
     padding-left: 5px; 
 	padding-right: 5px; 
@@ -11,20 +12,26 @@
     margin-top: 12px;
     
 }
-.todoItem-todo span {
+
+.delete
+{
+    position: absolute;
+    right: 800px;
+    background-color: #f44336;
+    color: white;
     border: none;
-    color: red;
-    word-spacing: 30px;
-    text-align: right;
-    float: right;
-    
-  
-  }
+    padding: 0px 10px;
+    text-align: center;
+    font-size: 16px;
 
-  .todoItem-todo input {
+}
+.check
+{
+    position: absolute;
+    left: 800px;
+    bottom: 500;
 
+}
 
-  }
-  
 
  
